--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "online-cinema-react-native",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~47.0.3",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+	"name": "online-cinema-react-native",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"android:dev": "expo start -c --android",
+		"ios:dev": "expo start -c --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"expo": "~47.0.3",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-native": "0.70.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@trivago/prettier-plugin-sort-imports": "^3.4.0",
+		"@tsconfig/react-native": "^2.0.2",
+		"@types/expo": "^33.0.1",
+		"@types/react": "^18.0.25",
+		"@types/react-native": "^0.70.6",
+		"babel-plugin-root-import": "^6.6.0",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.4"
+	},
+	"private": true
 }
