--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-navigation/native": "^6.0.13",
+		"@react-navigation/native-stack": "^6.9.1",
+		"clsx": "^1.2.1",
 		"expo": "~47.0.3",
+		"expo-linear-gradient": "^12.0.1",
 		"expo-status-bar": "~1.4.2",
+		"nativewind": "^2.0.11",
 		"react": "18.1.0",
-		"react-native": "0.70.5"
+		"react-hook-form": "^7.39.3",
+		"react-native": "0.70.5",
+		"react-native-safe-area-context": "^4.4.1",
+		"react-native-screens": "^3.18.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
@@ -25,6 +33,7 @@
 		"@types/react-native": "^0.70.6",
 		"babel-plugin-root-import": "^6.6.0",
 		"prettier": "^2.7.1",
+		"tailwindcss": "^3.2.3",
 		"typescript": "^4.8.4"
 	},
 	"private": true
