--- a/app.json
+++ b/app.json
@@ -5,12 +5,12 @@
 		"owner": "fesson777",
 		"version": "1.0.0",
 		"orientation": "portrait",
-		"icon": "./assets/icon.png",
+		"icon": "./app/assets/icon.png",
 		"userInterfaceStyle": "dark",
 		"splash": {
-			"image": "./assets/splash.png",
+			"image": "./app/assets/splash.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#111111"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
@@ -21,12 +21,12 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
-				"backgroundColor": "#0909"
+				"foregroundImage": "./app/assets/adaptive-icon.png",
+				"backgroundColor": "#111111"
 			}
 		},
 		"web": {
-			"favicon": "./assets/favicon.png"
+			"favicon": "./app/assets/favicon.png"
 		}
 	}
 }
