--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-	"name": "online-cinema-react-native",
-	"version": "1.0.0",
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"android:dev": "expo start -c --android",
-		"ios:dev": "expo start -c --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.17.11",
-		"@react-navigation/native": "^6.0.13",
-		"@react-navigation/native-stack": "^6.9.1",
-		"@tanstack/react-query": "^4.16.1",
-		"axios": "^1.1.3",
-		"clsx": "^1.2.1",
-		"expo": "~47.0.3",
-		"expo-image-picker": "^14.0.1",
-		"expo-linear-gradient": "^12.0.1",
-		"expo-secure-store": "^12.0.0",
-		"expo-splash-screen": "^0.17.4",
-		"expo-status-bar": "~1.4.2",
-		"nativewind": "^2.0.11",
-		"react": "18.1.0",
-		"react-hook-form": "^7.39.3",
-		"react-native": "0.70.5",
-		"react-native-dropdown-picker": "^5.4.3",
-		"react-native-pell-rich-editor": "^1.8.8",
-		"react-native-safe-area-context": "^4.4.1",
-		"react-native-screens": "^3.18.2",
-		"react-native-toast-message": "^2.1.5"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.9",
-		"@trivago/prettier-plugin-sort-imports": "^3.4.0",
-		"@tsconfig/react-native": "^2.0.2",
-		"@types/expo": "^33.0.1",
-		"@types/react": "^18.0.25",
-		"@types/react-native": "^0.70.6",
-		"babel-plugin-root-import": "^6.6.0",
-		"prettier": "^2.7.1",
-		"tailwindcss": "^3.2.3",
-		"typescript": "^4.8.4"
-	},
-	"private": true
+  "name": "online-cinema-react-native",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "android:dev": "expo start -c --android",
+    "ios:dev": "expo start -c --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@tanstack/react-query": "^4.16.1",
+    "axios": "^1.1.3",
+    "clsx": "^1.2.1",
+    "expo": "~47.0.3",
+    "expo-blur": "^12.0.1",
+    "expo-image-picker": "^14.0.1",
+    "expo-linear-gradient": "^12.0.1",
+    "expo-secure-store": "^12.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
+    "react": "18.1.0",
+    "react-hook-form": "^7.39.3",
+    "react-native": "0.70.5",
+    "react-native-dropdown-picker": "^5.4.3",
+    "react-native-pell-rich-editor": "^1.8.8",
+    "react-native-reanimated": "^2.12.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-toast-message": "^2.1.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/expo": "^33.0.1",
+    "@types/react": "^18.0.25",
+    "@types/react-native": "^0.70.6",
+    "babel-plugin-root-import": "^6.6.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.3",
+    "typescript": "^4.8.4"
+  },
+  "private": true
 }
